--- a/style.css
+++ b/style.css
@@ -1434,7 +1434,7 @@ form.search button:hover {
 	width: 0;
 }
 
-.products .variant label::before {
+.products .colors .variant label::before {
 	opacity: 1;
 }
 
@@ -1981,7 +1981,7 @@ input[type="range"]::-webkit-slider-thumb {
 	opacity: 1;
 }
 
-.mini-cart .products img {
+:is(.mini-cart .products, .products.cart) .thumbnail img {
 	transform: none;
 }
 
@@ -2012,7 +2012,7 @@ input[type="range"]::-webkit-slider-thumb {
 	overflow: auto;
 }
 
-.mini-cart .thumbnail {
+:where(.mini-cart, .products.cart) .thumbnail {
 	position: relative;
 	width: 80px;
 	height: 80px;
@@ -2063,6 +2063,173 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 /* ----------------------
+ * -----12. Page Cart------
+ *--------------------- */
+
+.products.cart form {
+	width: var(--percent100);
+}
+
+.products.cart table thead th {
+	vertical-align: middle;
+	background-color: var(--light-bg-color);
+}
+
+.products.cart table :where(th, td) {
+	padding: 2em 1em;
+	text-align: center;
+}
+
+.products.cart table :where(th, td):first-child {
+	text-align: left;
+	padding-left: 2em;
+}
+
+.products.cart table tbody td:first-child {
+	padding-left: 0;
+}
+
+.products.cart table td :where(.content, .qty-control, p) {
+	margin: 0;
+	padding: 0;
+}
+
+.products.cart .qty-control :where(button, input) {
+	width: 32px;
+	height: 32px;
+	padding: 0.25em;
+	text-align: center;
+	outline: 0;
+	border: 0;
+	background-color: transparent;
+}
+
+.products.cart .qty-control button {
+	cursor: pointer;
+}
+
+.products.cart table tbody tr {
+	border-bottom: 1px solid var(--border-color);
+}
+
+.cart-summary {
+	width: var(--percent100);
+	margin: 2.5em 0 4em;
+}
+
+.cart-summary .item {
+	background-color: var(--light-bg-color);
+}
+
+.cart-summary .coupon {
+	position: relative;
+}
+
+.cart-summary .coupon input {
+	font-size: 1.1em;
+	outline: 0;
+	width: var(--percent100);
+	padding: 0 1.5em;
+	line-height: 50px;
+	background-color: var(--white-color);
+	border: 3px solid var(--dark-color);
+}
+
+.cart-summary .coupon button {
+	position: absolute;
+	top: 0;
+	right: 0;
+	border: 0;
+	outline: 0;
+	font-size: 1em;
+	padding: 0 2.5em;
+	line-height: 56px;
+	background-color: var(--dark-color);
+	color: var(--white-color);
+	cursor: pointer;
+}
+
+.cart-summary .shipping-rate {
+	padding: 0 2em 0 1em;
+}
+
+.cart-summary .shipping-rate .has-child > a {
+	font-size: 1em;
+	margin: 2em 0;
+	border: 0;
+}
+.cart-summary .content form {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 1em;
+}
+
+.styled :where(input, select, textarea) {
+	padding: 0.75em;
+	outline: 0;
+	background-color: var(--white-color);
+	border-width: 0 0 3px 0;
+	border-style: solid;
+	border-color: var(--border-color);
+}
+
+.products .cart-summary .variant form label {
+	position: relative;
+	border: 0;
+	background-color: var(--white-color);
+	transform: scale(0.5) translateX(-25px);
+}
+
+.cart-summary .variant p span {
+	position: absolute;
+	top: 0;
+	left: 20px;
+	line-height: 3;
+}
+
+.cart-summary .variant input:checked + label::before {
+	opacity: 1;
+}
+
+.products.cart .cart-total table tr > * {
+	padding: 0;
+}
+
+.products.cart .cart-total table td {
+	text-align: right;
+}
+
+.cart-summary .cart-total {
+	padding: 2em;
+	background-color: var(--border-color);
+	line-height: 2em;
+}
+
+.cart-summary .cart-total table {
+	width: var(--percent100);
+}
+
+.cart-summary .cart-total table tr {
+	display: flex;
+	justify-content: space-between;
+}
+
+.cart-summary .grand-total td {
+	font-size: 2em;
+	font-family: "Poppins";
+	font-weight: var(--fw8);
+	line-height: 2em;
+}
+
+.cart-summary .cart-total > a {
+	width: var(--percent100);
+	display: block;
+	text-align: center;
+	margin-top: 2em;
+	font-size: 1.25em;
+}
+
+/* ----------------------
  * -----15. RESPONSIVE------
  *--------------------- */
 @media screen and (min-width: 481px) {
@@ -2081,6 +2248,37 @@ input[type="range"]::-webkit-slider-thumb {
 
 	.products.one .thumbnail-show {
 		height: 160px;
+	}
+}
+
+@media screen and (max-width: 639px) {
+	#cart-table thead {
+		display: none;
+	}
+
+	#cart-table tbody tr {
+		display: flex;
+		flex-wrap: wrap;
+		position: relative;
+		align-items: center;
+	}
+
+	#cart-table tbody tr td:first-child {
+		width: var(--percent100);
+		min-width: var(--percent100);
+		position: relative;
+	}
+
+	#cart-table tbody tr td:not(:first-child) {
+		flex-basis: 0;
+		flex-grow: 1;
+		max-width: var(--percent100);
+	}
+
+	#cart-table tbody tr td:last-child {
+		position: absolute;
+		top: 0;
+		right: 0;
 	}
 }
 
@@ -2372,5 +2570,16 @@ input[type="range"]::-webkit-slider-thumb {
 
 	.single-category .products.main .item {
 		flex: 0 0 33.3333%;
+	}
+
+	/* page cart */
+	.products.cart .form-cart {
+		width: 66%;
+	}
+
+	.products.cart .cart-summary {
+		width: 34%;
+		padding-left: 2.5em;
+		margin-top: 0;
 	}
 }
